k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-switchover
  annotations:
    haproxy.org/server-ssl: "false"
spec:
  ingressClassName: haproxy
  rules:
    - host: cambiador.level5.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudflare-switchover
                port:
                  number: 8080
